<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#B2EBF2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:src="@drawable/kish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cover_image_description"
        app:layout_constraintVertical_bias="0.4" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#B2EBF2"
        android:src="@drawable/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover"
        android:contentDescription="@string/play_button_description"/>

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:backgroundTint="#B2EBF2"
        android:src="@drawable/previous"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintTop_toTopOf="@id/playButton"
        android:contentDescription="@string/previous_track_description"/>

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:backgroundTint="#B2EBF2"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintTop_toTopOf="@id/playButton"
        android:contentDescription="@string/next_track_description"/>

    <TextView
        android:id="@+id/musician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/musician_default"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/track_default"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musician" />

</androidx.constraintlayout.widget.ConstraintLayout>